name:                gloss-counter
version:             0.1.0.0
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4,
                       gloss,
                       random,
                       containers
  hs-source-dirs:      src
  other-modules:       Player
                     , Bullet
                     , Enemy
                     , Asteroid
                     , DeadAsteroid
                     , Ufo
                     , Collision
                     , CollisionAsteroid
                     , CollisionBullet
                     , CollisionPlayer
                     , CollisionUfo
                     , Vector
                     , Update
                     , Constants
                     , Model
                     , InitialState
                     , Controller
                     , View
                     , ViewGamestate
                     , ViewPaused
                     , ViewGameOver
                     , Score
                     , HighScore
  default-language:    Haskell2010